# pyfwert

./: LICENSE  README.md  pafwert.py  pyproject.toml
src/pyfwert/: __init__.py  __main__.py  cli.py  constants.py  generator.py  modifiers.py  number_text.py  parser.py  placeholders.py  pronounceable.py  random.py  utils.py  wordlists.py
tests/: __init__.py  test_generator.py  test_modifiers.py  test_parser.py  test_random.py
